--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ footer{
 @media screen and (max-width: 720px) {
     .body{
         padding-right: 0;
+        padding-left: 1rem;
     }
 
     .sections{
